开始做返回键，涉及更深的Fragment操作

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <string name="f_size_h1">35sp</string>
+    <string name="f_size_h2">25sp</string>
+    <string name="f_size_h3">15sp</string>
+
 </resources>
