--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="colorwhite">#FFFFFF</color>
     <color name="icon_gray">#AAAAAA</color>
     <color name="bg_white">#F9F9F9</color>
-    <color name="theme">#4DB6AC</color>
+    <color name="theme_color">#4DB6AC</color>
+    <color name="white">#FFFFFF</color>
+    <color name="mine">#54D0C4</color>
+    <color name="gray">#cccccc</color>
 </resources>
