去掉了MainFragments，如果只有一个活动的话，底部栏和ToolBar是不能去掉的

--- a/app/src/main/res/layout/frag_main.xml
+++ b/app/src/main/res/layout/frag_main.xml
@@ -9,7 +9,7 @@
     tools:context=".ui.MainActivity"
     android:background="@color/bg_white">
 
-    <!--<include layout="@layout/top_toolbar"/>-->
+    <include layout="@layout/top_toolbar"/>
 
     <!--<android.support.v4.view.ViewPager-->
         <!--android:id="@+id/view_page"-->
