--- a/app/src/main/res/layout/activity_sporting.xml
+++ b/app/src/main/res/layout/activity_sporting.xml
@@ -12,7 +12,7 @@
         android:id="@+id/imageView2"
         android:layout_width="421dp"
         android:layout_height="361dp"
-        app:srcCompat="@drawable/drill"
+        app:srcCompat="@drawable/sport_drill"
         tools:layout_editor_absoluteX="-2dp"
         tools:layout_editor_absoluteY="81dp" />
 
@@ -24,7 +24,7 @@
         1、挺胸收腹，躯干与腿部保持一条直线
         2、手臂自然伸直垂直于地面
         3、双手与肩同宽，始终保持腰背挺直，控制肘部紧贴身体两侧"
-        android:textColor="@color/colorwhite"
+        android:textColor="@color/white"
         android:textSize="18sp"
         tools:layout_editor_absoluteX="37dp"
         tools:layout_editor_absoluteY="475dp" />
