--- a/app/src/main/res/layout/frag_main.xml
+++ b/app/src/main/res/layout/frag_main.xml
@@ -33,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorwhite"
+        android:background="@color/white"
         app:itemTextColor="@color/color_bnv_selected_text"
         app:itemIconTint="@color/color_bnv_selected_text"
         app:menu="@menu/bottom_nav" />
