--- a/app/src/main/res/layout/frag_sport_main.xml
+++ b/app/src/main/res/layout/frag_sport_main.xml
@@ -5,10 +5,10 @@
     android:id="@+id/frag_sport"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp">
-    <include layout="@layout/home_1"></include>
-    <include layout="@layout/home_2"></include>
+    <include layout="@layout/sport_main_part1"></include>
+    <include layout="@layout/sport_main_part2"></include>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="20dp"></LinearLayout>
-    <include layout="@layout/home_3"></include>
+    <include layout="@layout/sport_main_part3"></include>
 </LinearLayout>
