--- a/app/src/main/res/layout/sport_main_part3.xml
+++ b/app/src/main/res/layout/sport_main_part3.xml
@@ -26,6 +26,7 @@
 
         </TextView>
         <TextView
+            android:id="@+id/test"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
