--- a/app/src/main/res/layout/top_toolbar.xml
+++ b/app/src/main/res/layout/top_toolbar.xml
@@ -6,9 +6,9 @@
     android:id="@+id/top_toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colortop"
+    android:background="@color/theme_color_deep"
     app:title="课程介绍"
-    app:titleTextColor="@color/colorwhite"
+    app:titleTextColor="@color/white"
     app:titleMarginStart="150dp">
 
 </android.support.v7.widget.Toolbar>
