--- a/app/src/main/res/layout/user_part1.xml
+++ b/app/src/main/res/layout/user_part1.xml
@@ -13,7 +13,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
+            android:layout_marginLeft="50dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:text="@string/course"
@@ -22,12 +22,12 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="150dp"
+            android:layout_marginLeft="150dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:scaleX="0.6"
             android:scaleY="0.6"
-            android:src="@drawable/right" />
+            android:src="@drawable/ic_right_b" />
 
     </LinearLayout>
     <View
@@ -35,7 +35,7 @@
         android:layout_height="2dp"
         android:tag="实线"
         android:layout_marginTop="10dp"
-        android:background="@color/gray" />
+        android:background="@color/font_gray" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -44,7 +44,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
+            android:layout_marginLeft="50dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:text="@string/diet"
@@ -53,12 +53,12 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="150dp"
+            android:layout_marginLeft="150dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:scaleX="0.6"
             android:scaleY="0.6"
-            android:src="@drawable/right" />
+            android:src="@drawable/ic_right_b" />
 
     </LinearLayout>
     <View
@@ -66,7 +66,7 @@
         android:layout_height="2dp"
         android:tag="实线"
         android:layout_marginTop="10dp"
-        android:background="@color/gray" />
+        android:background="@color/font_gray" />
 
 
 
