--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,12 +3,12 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colortop">#4DB6AC</color>
-    <color name="colorwhite">#FFFFFF</color>
     <color name="icon_gray">#AAAAAA</color>
+    <color name="icon_black">#101010</color>
     <color name="bg_white">#F9F9F9</color>
-    <color name="theme_color">#4DB6AC</color>
+    <color name="theme_color_deep">#4DB6AC</color>
     <color name="white">#FFFFFF</color>
-    <color name="mine">#54D0C4</color>
-    <color name="gray">#cccccc</color>
+    <color name="theme_color_shallow">#54D0C4</color>
+    <color name="font_gray">#cccccc</color>
+    <color name="tiao">#EBF0F2</color>
 </resources>
