--- a/app/src/main/res/layout/content_food_detail.xml
+++ b/app/src/main/res/layout/content_food_detail.xml
@@ -4,33 +4,35 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <RelativeLayout
             android:id="@+id/details_rl_1"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:background="@color/white">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/food_name"
-                android:textSize="25sp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="40dp"></TextView>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/food_element"
                 android:layout_marginLeft="30dp"
-                android:textSize="15sp"
+                android:layout_marginTop="40dp"
+                android:text="@string/food_name"
+                android:textSize="25sp"></TextView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="40dp"></TextView>
+                android:layout_marginLeft="30dp"
+                android:layout_marginBottom="40dp"
+                android:text="@string/food_element"
+                android:textSize="15sp"></TextView>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@drawable/sport_drill"
-                android:layout_alignParentBottom="true"></TextView>
+                android:layout_alignParentBottom="true"
+                android:background="@drawable/sport_drill"></TextView>
         </RelativeLayout>
 
         <RelativeLayout
