--- a/app/src/main/res/layout/farg_user_main.xml
+++ b/app/src/main/res/layout/farg_user_main.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/bg_white"
         android:orientation="vertical">
 
@@ -33,15 +33,15 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginTop="50dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginTop="55dp"
                     android:textColor="@color/white"
                     android:text="人鱼线的pdd" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
+                    android:layout_marginLeft="40dp"
                     android:layout_marginTop="15dp"
                     android:textColor="@color/white"
                     android:text="@string/male" />
@@ -109,9 +109,11 @@
                     <TextView
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
-                        android:text="59"
+                        android:layout_marginTop="10dp"
                         android:gravity="center"
-                        android:textSize="30sp" />
+                        android:text="59"/>
+                        <!--android:textSize="30sp" -->
+
                 </LinearLayout>
 
                 <!--今日运动-->
@@ -131,7 +133,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:gravity="center"
-                        android:textSize="18sp"
                         android:text="233"/>
                 </LinearLayout>
 
@@ -154,6 +155,7 @@
                         android:gravity="center"
                         android:text="1024"/>
                 </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
