--- a/app/src/main/res/layout/frag_sport_main.xml
+++ b/app/src/main/res/layout/frag_sport_main.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:id="@+id/frag_sport"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp">
-    <include layout="@layout/sport_main_part1"></include>
-    <include layout="@layout/sport_main_part2"></include>
+   >
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="20dp"></LinearLayout>
-    <include layout="@layout/sport_main_part3"></include>
+        android:layout_width="380dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <include layout="@layout/sport_main_part1"/>
+
+        <include layout="@layout/sport_main_part2"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="15dp"
+            />
+
+        <include layout="@layout/sport_main_part3"/>
+
+    </LinearLayout>
+
 </LinearLayout>
