--- a/app/src/main/res/layout/sport_main_part1.xml
+++ b/app/src/main/res/layout/sport_main_part1.xml
@@ -1,29 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:gravity="center_vertical"
         android:background="@color/bg_white">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/circle"
             android:layout_gravity="center"
             android:layout_marginLeft="20dp"
-            android:backgroundTint="@color/white">
-        </TextView>
-        <TextView
-            android:layout_width="300dp"
-            android:layout_height="40dp"
-            android:background="@drawable/btn_circle_mine"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:text="定个目标，believe in yourself"
-            android:gravity="center"
-            android:textColor="@color/white">
-        </TextView>
+            android:backgroundTint="@color/white"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right">
+
+            <TextView
+                android:layout_width="280dp"
+                android:layout_height="40dp"
+                android:background="@drawable/btn_circle_mine"
+                android:layout_gravity="center"
+                android:layout_marginRight="10dp"
+                android:text="定个目标，believe in yourself"
+                android:gravity="center"
+                android:textColor="@color/white"/>
+
+        </LinearLayout>
+
     </LinearLayout>
+
 </LinearLayout>
