--- a/app/src/main/res/layout/stablefood.xml
+++ b/app/src/main/res/layout/stablefood.xml
@@ -13,26 +13,26 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
             android:text="@string/stable_food"/>
 
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
             android:background="#ccc"
             />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
             android:text="燕麦片"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="140dp"
+            android:layout_marginLeft="140dp"
             android:text="约71g"/>
 
     </LinearLayout>
@@ -42,6 +42,6 @@
         android:layout_height="2dp"
         android:tag="实线"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="80dp"
+        android:layout_marginLeft="80dp"
         android:background="@drawable/line_solid" />
 </LinearLayout>
