--- a/app/src/main/res/layout/community_1.xml
+++ b/app/src/main/res/layout/community_1.xml
@@ -3,7 +3,7 @@
     android:layout_width="wrap_content" android:layout_height="wrap_content">
 
     <RelativeLayout
-        android:id="@+id/com_rl_1"
+        android:id="@+id/conasd"
         android:layout_width="180dp"
         android:layout_height="300dp"
         android:background="@color/white">
