--- a/app/src/main/res/layout/dynamic_detailslayout.xml
+++ b/app/src/main/res/layout/dynamic_detailslayout.xml
@@ -16,7 +16,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginleft="30dp"
+            android:layout_marginLeft="30dp"
             android:scaleX="0.6"
             android:scaleY="0.6"
             android:src="@drawable/ic_left"/>
@@ -28,12 +28,12 @@
             android:textSize="25sp"
             android:textStyle="bold"
             android:textColor="@color/white"
-            android:layout_marginleft="20dp" />
+            android:layout_marginLeft="20dp" />
 
         <ImageView
             android:layout_width="35dp"
             android:layout_height="31dp"
-            android:layout_marginleft="150dp"
+            android:layout_marginLeft="150dp"
             android:src="@drawable/ic_share_white" />
 
     </LinearLayout>
@@ -47,13 +47,13 @@
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginleft="30dp"
+            android:layout_marginLeft="30dp"
             android:background="@color/icon_gray"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginleft="30dp"
+            android:layout_marginLeft="30dp"
             android:orientation="vertical">
 
             <TextView
